# aos-operator

./: Cargo.toml  README.md
crates/alloy-wrapper/src/contracts/: vrf_range.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/contracts/abi/: operator_range_manager.json
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs  msg_signer.rs
crates/vrf/src/: ecvrf.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: lib.rs  test.rs
docs/template/: config-operator-ws.yaml  config-operator.yaml
operator/db_sql/src/pg/entities/: job_result_param.rs  mod.rs  prelude.rs
operator/db_sql/src/pg/migrator/: m20220101_000001_create_job_result_param_table.rs  mod.rs
operator/node_api/: Cargo.toml
operator/node_api/src/: config.rs
operator/runer/: Cargo.toml
operator/runer/src/: error.rs  lib.rs  main.rs  node_factory.rs  operator.rs  storage.rs  test.rs
operator/runer/src/api/: mod.rs  msg.rs  msg_handler.rs  test.rs  vrf_key.rs
operator/runer/src/cli/: operator.rs
operator/runer/src/queue/: mod.rs  msg_queue.rs  test.rs
operator/verify_hub/: Cargo.toml
operator/verify_hub/src/: config.rs  error.rs  lib.rs
operator/verify_hub/src/opml/: handler.rs  mod.rs  model.rs
operator/verify_hub/src/server/: server.rs
operator/verify_hub/src/tee/: handler.rs  model.rs
operator/verify_hub/src/zkml/: handler.rs  model.rs
