[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
signer = {path = "../signer"}
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.6"
secp256k1 = "0.24"
url = "2.5.2"
thiserror = "1.0.22"
