[package]
name = "verify_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
reqwest = { version = "0.12.5", features = ["default", "json"] }
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
alloy = { version = "0.2.0", features = ["full"] }
thiserror = "1.0.22"

[lints]
workspace = true

